<resources>
    <string name="app_name">MyApp</string>
    <string name="about_us">About us</string>
    <string name="news">News</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="help">Help</string>
    <string name="contacts">Contacts</string>
    <string name="view_news_open">Open</string>
    <string name="view_news_close">Close</string>
    <string name="btn_main">MAIN</string>
    <string name="email_adress">Alex55795579@gmail.com</string>
    <string name="im1_btn">image 1</string>
    <string name="im2_btn">image 2</string>
    <string name="im3_btn">default</string>
    <string name="item_context1">picture 1</string>
    <string name="item_context2">picture 2</string>
    <string name="item_context3">picture 3</string>
    <string name="image_context">context menu</string>
    <string name="context_item_toast1">context toast 1</string>
    <string name="context_item_toast2">context toast 2</string>
    <string name="context_item_toast3">context toast 3</string>


</resources>
