<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/aboutItem"
        android:title="@string/about_us"
        android:orderInCategory="1"
        android:icon="@drawable/information_variant"
        />
    <item
        android:id="@+id/newsItem"
        android:title="@string/news"
        android:orderInCategory="2"
        android:icon="@drawable/newspaper"
        />
    <item
        android:id="@+id/imagesItem"
        android:title="@string/images"
        android:orderInCategory="3"
        android:icon="@drawable/folder_multiple_image"
        />
    <item
        android:id="@+id/videosItem"
        android:title="@string/videos"
        android:orderInCategory="4"
        android:icon="@drawable/video"
        />
    <item
        android:id="@+id/helpItem"
        android:title="@string/help"
        android:orderInCategory="5"
        android:icon="@drawable/help"
        />
    <item
        android:id="@+id/contactsItem"
        android:title="@string/contacts"
        android:orderInCategory="6"
        android:icon="@drawable/contacts"
        />
</menu>